--- a/samples/views/index.html
+++ b/samples/views/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-$END$
+<section>
+    <h1>Chatbot Skeleton</h1>
+    <h2>using Google Speech API</h2>
+
+
+
+    <div>
+        <p>You said: <em class="output-you">...</em></p>
+        <p>Bot replied: <em class="output-bot">...</em></p>
+    </div>
+</section>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
