Changes to index.html

--- a/samples/views/index.html
+++ b/samples/views/index.html
@@ -18,8 +18,8 @@
 
 
     <div>
-        <p>You said: <em class="output-you">...</em></p>
-        <p>Bot replied: <em class="output-bot">...</em></p>
+        <p>User: <em class="output-you">...</em></p>
+        <p>Bot: <em class="output-bot">...</em></p>
     </div>
 </section>
 
