--- a/samples/views/index.html
+++ b/samples/views/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+<audio><source class=track" src="" type="audio/mpeg"> </audio>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZh0sEEamd0YGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="https://sdk.amazonaws.com/js/aws-sdk-2.188.0.min.js"></script>
+
 <section>
     <h1>Chatbot Skeleton</h1>
     <h2>using Google Speech API</h2>
